--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,8 @@
     "cinttypes": "cpp",
     "typeindex": "cpp",
     "typeinfo": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "*.ipp": "cpp"
   },
   "C_Cpp.default.compilerPath": "/usr/bin/cpp"
 }
