Robot description and transformations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,8 @@ install(DIRECTORY
   launch
   resource
   worlds
+  src
+  rviz
   DESTINATION share/${PROJECT_NAME}
 )
 ament_export_include_directories(
