--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,13 +24,13 @@ pluginlib_export_plugin_description_file(webots_ros2_driver ocslam.xml)
 
 # Add each node to the add_executable() command
 add_executable(Socket src/Socket.cpp)
-add_executable(Capture src/Capture.cpp)
+#add_executable(Capture src/Capture.cpp)
 add_executable(main src/main.cpp)
 
 
 # Link each node to the necessary libraries
 target_link_libraries(Socket ${PROJECT_NAME})
-target_link_libraries(Capture ${PROJECT_NAME})
+#target_link_libraries(Capture ${PROJECT_NAME})
 target_link_libraries(main ${PROJECT_NAME})
 
 
@@ -40,7 +40,7 @@ add_library(
   src/Robot.cpp
   src/main.cpp
   src/Socket.cpp
-  src/Capture.cpp
+  #src/Capture.cpp
 )
 target_include_directories(
   ${PROJECT_NAME}
@@ -66,7 +66,7 @@ ament_target_dependencies(
 install(TARGETS
   ${PROJECT_NAME}
   Socket
-  Capture
+  #Capture
   main
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
