Manual projection completed and calibrated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,7 @@ include_directories(
 install(PROGRAMS
   scripts/YOLO.py
   scripts/Calibration.py
+  scripts/Projection.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
