Find points inside bounding areas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(pcl_conversions REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(pluginlib REQUIRED)
 find_package(webots_ros2_driver REQUIRED)
+find_package(Boost REQUIRED COMPONENTS system filesystem)
 
 ament_python_install_package(${PROJECT_NAME})
 
@@ -23,13 +24,13 @@ ament_python_install_package(${PROJECT_NAME})
 pluginlib_export_plugin_description_file(webots_ros2_driver ocslam.xml)
 
 # Add each node to the add_executable() command
-add_executable(Socket src/Socket.cpp)
+# add_executable(Socket src/Socket.cpp)
 #add_executable(Capture src/Capture.cpp)
 add_executable(main src/main.cpp)
 
 
 # Link each node to the necessary libraries
-target_link_libraries(Socket ${PROJECT_NAME})
+# target_link_libraries(Socket ${PROJECT_NAME})
 #target_link_libraries(Capture ${PROJECT_NAME})
 target_link_libraries(main ${PROJECT_NAME})
 
@@ -39,8 +40,8 @@ add_library(
   SHARED
   src/Robot.cpp
   src/main.cpp
-  src/Socket.cpp
-  #src/Capture.cpp
+  # src/Socket.cpp
+  # src/Capture.cpp
 )
 target_include_directories(
   ${PROJECT_NAME}
@@ -49,8 +50,10 @@ target_include_directories(
 )
 
 find_package(cv_bridge REQUIRED)
+find_package(Boost REQUIRED)
 include_directories(${cv_bridge_INCLUDE_DIRS})
 target_link_libraries(main ${cv_bridge_LIBRARIES})
+# target_link_libraries(Socket ${Boost_LIBRARIES})
 
 
 
@@ -65,8 +68,8 @@ ament_target_dependencies(
 )
 install(TARGETS
   ${PROJECT_NAME}
-  Socket
-  #Capture
+  # Socket
+  # Capture
   main
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
