--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,7 +78,9 @@
     "any": "cpp",
     "coroutine": "cpp",
     "source_location": "cpp",
-    "valarray": "cpp"
+    "valarray": "cpp",
+    "dense": "cpp",
+    "core": "cpp"
   },
   "C_Cpp.default.compilerPath": "/usr/bin/cpp",
     "python.linting.pylintArgs": ["--generate-members"],
